1) fix compiler warning (for gcc 8 and higher). 2) Housekeeping

--- a/xsrc/ratt/top/start_here.html
+++ b/xsrc/ratt/top/start_here.html
@@ -5326,7 +5326,7 @@ html .solidborders td {  border: 1px solid black; }</pre>
 <div modified="20141230012524223" title="$:/state/toc/Contents-Overview--242358753">
 <pre>open</pre>
 </div>
-<div list="rattlib [[Test Scripts]] [[Recommended Conventions]] [[Command Line Usage]] Overview" title="$:/StoryList">
+<div list="Overview" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20141011164829984" modified="20141020024516096" title="$:/temp/advancedsearch">
